<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_border"
    android:orientation="vertical"
    android:padding="40sp">

    <TextView
        android:id="@+id/addUserHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:text="@string/addUserHeading"
        android:textSize="@dimen/headingText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/username"
        android:textSize="@dimen/bodyText" />

    <EditText
        android:id="@+id/customerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bodyText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="@dimen/bodyText" />

    <EditText
        android:id="@+id/customerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bodyText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="@dimen/bodyText" />

    <EditText
        android:id="@+id/customerAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bodyText"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="@dimen/bodyText" />

    <EditText
        android:id="@+id/customerAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bodyText" />

    <Button
        android:id="@+id/createCustomerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:text="@string/createButton"
        android:textSize="@dimen/bodyText" />

</LinearLayout>