<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/frameHorizontal"
    android:paddingRight="@dimen/frameHorizontal"
    android:paddingTop="@dimen/frameVertical"
    tools:context=".CustomerCartActivity">

    <TextView
        android:id="@+id/yourCartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/cartHeader"
        android:textSize="@dimen/headingText" />

    <ScrollView
        android:id="@+id/cartScrollView"
        android:layout_width="match_parent"
        android:layout_height="400sp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/yourCartText"
        android:layout_marginTop="100sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/itemName1"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:layout_alignParentStart="true"
                    android:textSize="@dimen/bodyText"
                    android:text="@string/itemName1"/>

                <TextView
                    android:id="@+id/itemQuantity1"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:layout_toEndOf="@id/itemName1"
                    android:layout_marginStart="20sp"
                    android:textSize="@dimen/bodyText"
                    android:text="@string/itemQuantity1"/>

                <Button
                    android:id="@+id/removeItemButton"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/removeItemSymbol"/>

                <Button
                    android:id="@+id/addItemButton"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_toStartOf="@id/removeItemButton"
                    android:text="@string/addItemSymbol"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/itemName2"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:layout_alignParentStart="true"
                    android:textSize="@dimen/bodyText"
                    android:text="@string/itemName2"/>

                <TextView
                    android:id="@+id/itemQuantity2"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:layout_toEndOf="@id/itemName2"
                    android:layout_marginStart="20sp"
                    android:textSize="@dimen/bodyText"
                    android:text="@string/itemQuantity2"/>

                <Button
                    android:id="@+id/removeItemButton2"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/removeItemSymbol"/>

                <Button
                    android:id="@+id/addItemButton2"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_toStartOf="@id/removeItemButton2"
                    android:text="@string/addItemSymbol"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/totalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/cartScrollView"
        android:layout_marginTop="430sp"
        android:text="@string/totalPrice"
        android:textSize="@dimen/bodyText"
        />

    <Button
        android:id="@+id/checkOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/cartScrollView"
        android:layout_marginTop="420sp"
        android:layout_alignParentEnd="true"
        android:text="@string/checkOut"
        android:textSize="@dimen/bodyText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/checkOutButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50sp"
        android:text="@string/returnText"
        android:textSize="@dimen/bodyText"/>

</RelativeLayout>